versions/v2.8/modules/en/pages/troubleshooting/general-troubleshooting.adoc
= General Troubleshooting
:revdate: 2024-09-26
:page-revdate: {revdate}

This section contains information to help you troubleshoot issues when using Rancher.

* xref:troubleshooting/kubernetes-components/kubernetes-components.adoc[Kubernetes components]
+
If you need help troubleshooting core Kubernetes cluster components like:

 ** `etcd`
 ** `kube-apiserver`
 ** `kube-controller-manager`
 ** `kube-scheduler`
 ** `kubelet`
 ** `kube-proxy`
 ** `nginx-proxy`

* xref:troubleshooting/other-troubleshooting-tips/kubernetes-resources.adoc[Kubernetes resources]
+
Options for troubleshooting Kubernetes resources like Nodes, Ingress Controller and Rancher Agents are described in this section.

* xref:troubleshooting/other-troubleshooting-tips/networking.adoc[Networking]
+
Steps to troubleshoot networking issues can be found here.

* xref:troubleshooting/other-troubleshooting-tips/dns.adoc[DNS]
+
When you experience name resolution issues in your cluster.

* xref:installation-and-upgrade/troubleshooting/rancher-ha.adoc[Troubleshooting Rancher installed on Kubernetes]
+
If you experience issues with your xref:installation-and-upgrade/install-rancher.adoc[Rancher server installed on Kubernetes]

* xref:observability/logging/troubleshooting.adoc[Logging]
+
Read more about what log levels can be configured and how to configure a log level.

* xref:troubleshooting/other-troubleshooting-tips/user-id-tracking-in-audit-logs.adoc[User ID Tracking in Audit Logs]
+
Read more about how a Rancher Admin can trace an event from the Rancher audit logs and into the Kubernetes audit logs using the external Identity Provider username.

* xref:security/rancher-webhook/expired-webhook-certificate-rotation.adoc[Expired Webhook Certificates]
+
Read more about how to rotate a Rancher webhook certificate secret after it expires on an annual basis.
